# qtMidi

./: CMakeLists.txt  main.cpp  qtMidi.cpp  qtMidi.h  qtMidi.kdev4  qtmidi.desktop  readme
